; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_cgl_ctx.c_gfx_ctx_cgl_init_create.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_cgl_ctx.c_gfx_ctx_cgl_init_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kCGLPFAAccelerated = common dso_local global i32 0, align 4
@kCGLPFADoubleBuffer = common dso_local global i32 0, align 4
@kCGLCPSwapInterval = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @gfx_ctx_cgl_init_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @gfx_ctx_cgl_init_create() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca [3 x i32], align 4
  store i32 1, i32* %2, align 4
  store i32* null, i32** %4, align 8
  %6 = getelementptr inbounds [3 x i32], [3 x i32]* %5, i64 0, i64 0
  %7 = load i32, i32* @kCGLPFAAccelerated, align 4
  store i32 %7, i32* %6, align 4
  %8 = getelementptr inbounds i32, i32* %6, i64 1
  %9 = load i32, i32* @kCGLPFADoubleBuffer, align 4
  store i32 %9, i32* %8, align 4
  %10 = getelementptr inbounds i32, i32* %8, i64 1
  store i32 0, i32* %10, align 4
  %11 = getelementptr inbounds [3 x i32], [3 x i32]* %5, i64 0, i64 0
  %12 = call i32 @CGLChoosePixelFormat(i32* %11, i32* %3, i32* %1)
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @CGLCreateContext(i32 %13, i32* null, i32** %4)
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @CGLDestroyPixelFormat(i32 %15)
  %17 = load i32*, i32** %4, align 8
  %18 = load i32, i32* @kCGLCPSwapInterval, align 4
  %19 = call i32 @CGLSetParameter(i32* %17, i32 %18, i32* %2)
  %20 = load i32*, i32** %4, align 8
  ret i32* %20
}

declare dso_local i32 @CGLChoosePixelFormat(i32*, i32*, i32*) #1

declare dso_local i32 @CGLCreateContext(i32, i32*, i32**) #1

declare dso_local i32 @CGLDestroyPixelFormat(i32) #1

declare dso_local i32 @CGLSetParameter(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
